--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@rspack/core": "^1.3.15",
     "@rspack/dev-server": "^1.1.3",
     "@svgr/webpack": "^8.1.0",
+    "@types/react": "^19.1.8",
     "ts-checker-rspack-plugin": "^1.1.4",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@ark-ui/react": "^5.14.2",
-    "@fluentui/svg-icons": "^1.1.304",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mdi/svg": "^7.4.47",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0"
   }
 }
