--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mdi/svg": "^7.4.47",
+    "immer": "^10.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "rxjs": "^7.8.2",
     "uuid": "^11.1.0"
   }
 }
