--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mdi/svg": "^7.4.47",
+    "axios": "^1.10.0",
     "immer": "^10.1.1",
+    "marked": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rxjs": "^7.8.2",
