Add datepicker and plug it in to change goals deadline

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "goals-manager",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx rspack serve"
+    "start": "npx rspack serve",
+    "build": "npx rspack build"
   },
   "keywords": [],
   "author": "",
