Initial setup for github login

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "marked": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.8.2",
     "rxjs": "^7.8.2",
     "uuid": "^11.1.0"
   }
